refatornado exemplos no contrato e fix do dateFormat
